maybe fix burger menu on mobile phones, take 3

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -196,8 +196,8 @@
     padding: 0 0.5rem;
     border: 0;
     outline: none;
-    background-color: $text-color;
-    color: $body-color;
+    background-color: $body-color;
+    color: $text-color;
     cursor: pointer;
   }
 
